2002-08-26  Andrew Cagney  <ac131313@redhat.com>

	* i386-tdep.c: Include "reggroups.h".
	(i386_register_reggroup_p): New function.
	(i386_add_reggroups, i386_init_reggroups): New function.
	(i386_gdbarch_init): Call i386_add_reggroups.  Set
	register_reggroup_p.
	(_initialize_i386_tdep): Call i386_init_reggroups.

	* infcmd.c: Include <ctype.h>.
	(registers_info): Rewrite.  Handle reggroups.
	(default_print_registers_info): Use gdbarch_register_reggroup_p.
	(print_float_info): Use gdbarch_register_reggroup_p.

	* regcache.c: Include "reggroups.h".
	(regcache_dump): Include the register groups in the ``maint print
	registers'' command.

	* infcmd.c: Include "regroup.h".
	(default_print_registers_info): Use gdbarch_register_reggroup_p.
	(print_float_info): Ditto.

	* gdbarch.sh: Include "reggroups.h".
	(register_reggroup_p): New method.
	(struct reggroup): Add opaque declaration.
	* gdbarch.h, gdbarch.c: Regenerate.

	* Makefile.in (SFILES): Add reggroups.c.
	(reggroups_h): Define.
	(COMMON_OBS): Add reggroups.o.
	(reggroups.o): Specify dependencies.
	(gdbarch.o, infcmd.o, i386-tdep.o): Update dependencies.

	* reggroups.c: New file.
	* reggroups.h: New file.

2002-08-25  Andrew Cagney  <ac131313@redhat.com>

	* arch-utils.h (default_next_cooked_register_to_save): Declare.
	(default_next_cooked_register_to_restore): Declare.
	* arch-utils.c (default_next_cooked_register_to_save): New
	function.
	(default_next_cooked_register_to_restore): New function.

	* regcache.c (struct regcache): Replace passthrough_p with
	readonly_p.  Replace raw_registers with registers.  Replace
	raw_register_valid_p with register_valid_p.
	(struct regcache_descr): Replace sizeof_raw_registers with
	sizeof_registers.  Replace sizeof_raw_register_valid_p with
	sizeof_register_valid_p.
	(init_legacy_regcache_descr): Update.
	(init_regcache_descr): Update.
	(regcache_xmalloc): Update.
	(regcache_xfree): Update.
	(regcache_cpy): Update.
	(regcache_cpy_no_passthrough): Update.